<resources>
    <string name="app_name">Open Magnifier</string>
    <string name="translate_attribution">Powered by Google Translate</string>
    <string name="button_ok">OK</string>
    <string name="entries_enabled">Enabled</string>
    <string name="entries_tmp_enabled">Temporarily Enabled</string>
    <string name="entries_disabled">Disabled</string>
    <string name="entries_low">Low</string>
    <string name="entries_medium">Medium</string>
    <string name="entries_high">High</string>
    <string name="entries_none">None</string>
    <string name="entries_grayscale">Grayscale</string>
    <string name="entries_black_yellow">Black Yellow</string>
    <string name="entries_inverse">Inverse</string>
    <string name="entries_inverse_grayscale">Inverse Grayscale</string>
    <string name="entries_off">Off</string>
    <string name="entries_latin">Latin</string>
    <string name="entries_chinese">Chinese</string>
    <string name="entries_devanagari">Devanagari</string>
    <string name="entries_japanese">Japanese</string>
    <string name="entries_bengali">Bengali</string>
    <string name="entries_english">English</string>
    <string name="entries_french">French</string>
    <string name="entries_hindi">Hindi</string>
    <string name="entries_indonesian">Indonesian</string>
    <string name="entries_marathi">Marathi</string>
    <string name="entries_portuguese">Portuguese</string>
    <string name="entries_spanish">Spanish</string>
    <string name="entries_tagalog">Tagalog</string>
    <string name="entries_vietnamese">Vietnamese</string>
    <string name="entries_arabic">Arabic</string>
    <string name="entries_urdu">Urdu</string>
    <string name="entries_one_line">One line</string>
    <string name="entries_two_lines">Two lines</string>
    <string name="entries_three_lines">Three lines</string>
    <string name="entries_banner_white_black">White text, black background</string>
    <string name="entries_banner_black_white">Black text, white background</string>
    <string name="entries_banner_yellow_black">Yellow text, black background</string>
    <string name="entries_banner_black_yellow">Black text, yellow background</string>
    <string name="entries_banner_indigo_blue">Accessibility safe: deep indigo on sky blue</string>
    <string name="entries_banner_yellow_gray">Solar eclipse: soft yellow on dark slate gray</string>
    <string name="entries_banner_white_charcoal">Soft charcoal: off white on charcoal</string>
    <string name="entries_banner_espresso_cream">Warm sand: dark espresso on soft cream</string>
    <string name="entries_banner_font_system">System sans serif</string>
    <string name="entries_banner_font_hyperlegible_medium">Atkinson Hyperlegible Next Medium</string>
    <string name="entries_banner_font_hyperlegible_bold">Atkinson Hyperlegible Next Bold</string>
    <string name="entries_banner_font_dyslexic_regular">Open Dyslexic Regular</string>
    <string name="entries_banner_font_dyslexic_bold">Open Dyslexic Bold</string>
    <string name="entries_banner_font_lexend_deca_medium">Lexend Deca Medium</string>
    <string name="entries_banner_font_lexend_deca_bold">Lexend Deca Bold</string>
    <string name="entries_banner_font_lexend_giga_medium">Lexend Giga Medium</string>
    <string name="entries_banner_font_lexend_giga_bold">Lexend Giga Bold</string>
    <string name="entries_banner_font_lexend_peta_medium">Lexend Peta Medium</string>
    <string name="entries_banner_font_lexend_peta_bold">Lexend Peta Bold</string>
    <string name="entries_banner_font_lexend_zetta_medium">Lexend Zetta Medium</string>
    <string name="entries_banner_font_lexend_zetta_bold">Lexend Zetta Bold</string>
    <string name="entries_highlight_underline">Underlined</string>
    <string name="entries_highlight_green">Soft green highlight</string>
    <string name="entries_highlight_blue">Deep blue highlight</string>
    <string name="entries_highlight_green_underline">Soft green highlight, underlined</string>
    <string name="entries_highlight_blue_underline">Deep blue highlight, underlined</string>
    <string name="entries_highlight_green_font">Soft green font</string>
    <string name="entries_highlight_blue_font">Deep blue font</string>
    <string name="entries_highlight_green_font_underline">Soft green font, underlined</string>
    <string name="entries_highlight_blue_font_underline">Deep blue font, underlined</string>
    <string name="entries_white">White</string>
    <string name="entries_black">Black</string>
    <string name="entries_yellow">Yellow</string>
    <string name="entries_green">Green</string>
    <string name="entries_default">Default</string>
    <string name="settings_camera_category">Camera Settings</string>
    <string name="settings_keyboard_category">Keyboard Command Settings</string>
    <string name="settings_image_category">Image Settings</string>
    <string name="settings_ocr_category">Optical Character Recognition (OCR) Settings</string>
    <string name="settings_translate_category">Language Translation Settings</string>
    <string name="settings_banner_category">Text Banner Settings</string>
    <string name="settings_other_category">General Settings</string>
    <string name="settings_help_category">Help Overlay Settings</string>
    <string name="settings_tts_category">Text to Speech Settings</string>
    <string name="settings_rotation">Screen Rotation (freeze frame)</string>
    <string name="settings_zoom">Camera Zoom Level (live view)</string>
    <string name="settings_dx">Horizontal Scroll Percentage (freeze frame)</string>
    <string name="settings_dy">Vertical Scroll Percentage (freeze frame)</string>
    <string name="settings_color">Color Filters</string>
    <string name="settings_contrast">Contrast Boost</string>
    <string name="settings_brightness">Brightness Boost</string>
    <string name="settings_flashlight">Flashlight</string>
    <string name="settings_speak">Speak Image Script</string>
    <string name="settings_dest">Destination/Output Language</string>
    <string name="settings_source">Source/Input Language</string>
    <string name="settings_banner">Display Text Banner</string>
    <string name="settings_volume">Volume Key Controls</string>
    <string name="settings_banner_size">Text Banner Size</string>
    <string name="settings_banner_color">Text Banner Color</string>
    <string name="settings_banner_font">Text Banner Font</string>
    <string name="settings_banner_highlight">Text Banner Word Highlight</string>
    <string name="settings_clipboard">Clipboard</string>
    <string name="settings_help">Help Overlay</string>
    <string name="settings_help_size">Help Text Size</string>
    <string name="settings_help_color">Help Text Color</string>
    <string name="settings_help_font">Help Text Font</string>
    <string name="settings_help_timer">Help Clear Timer</string>
    <string name="settings_speech_rate">Speech Rate</string>
    <string name="settings_pitch_rate">Pitch</string>
    <string name="settings_speak_highlight">Speech Highlight</string>
    <string name="toast_brightness">Brightness %1$s</string>
    <string name="toast_brightness_disabled">Can\'t change brightness in live view</string>
    <string name="toast_contrast">Contrast %1$s</string>
    <string name="toast_contrast_disabled">Can\'t change contrast in live view</string>
    <string name="toast_color">Color filter %1$s</string>
    <string name="toast_color_disabled">Can\'t change color filter in live view</string>
    <string name="toast_flashlight">Flashlight %1$s</string>
    <string name="toast_flashlight_disabled">Can\'t change flashlight in frozen view</string>
    <string name="toast_flashlight_none">No flashlight</string>
    <string name="toast_rotation">Rotation %1$d°</string>
    <string name="toast_rotation_disabled">Can\'t rotate live view</string>
    <string name="toast_speak">Speak Image %1$s</string>
    <string name="toast_scroll_horizontal">Horizontal scroll %d%%</string>
    <string name="toast_scroll_horizontal_disabled">Can\'t change horizontal scroll in live view</string>
    <string name="toast_scroll_vertical">Vertical scroll %d%%</string>
    <string name="toast_scroll_vertical_disabled">Can\'t change vertical scroll in live view</string>
    <string name="toast_scroll_disabled">Can\'t scroll live view</string>
    <string name="toast_view_live_zoom">Live view, zoom %1$.2fx</string>
    <string name="toast_view_freeze_frame_zoom">Freeze frame, zoom %1$.2fx</string>
    <string name="toast_view_freeze_frame">Freeze frame</string>
    <string name="toast_translation_downloading">Translation model is being downloaded</string>
    <string name="toast_translation_downloaded">Translation model is ready</string>
    <string name="toast_copy_to_clipboard">Copied to clipboard</string>
    <string name="version_known">Version: %1$s</string>
    <string name="version_unknown">unknown</string>
    <string name="splash_title">Welcome to the Open Magnifier %1$s</string>
</resources>