<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_camera_category">

        <ListPreference
            app:defaultValue="1.0"
            app:entries="@array/zoom_entries"
            app:entryValues="@array/zoom_values"
            app:key="zoom_setting"
            app:title="@string/settings_zoom"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="0"
            app:entries="@array/rotation_entries"
            app:entryValues="@array/rotation_values"
            app:key="rotation_setting"
            app:title="@string/settings_rotation"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="0.0"
            app:entries="@array/flashlight_entries"
            app:entryValues="@array/flashlight_values"
            app:key="flashlight_setting"
            app:title="@string/settings_flashlight"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/settings_image_category">

        <ListPreference
            app:defaultValue="0"
            app:entries="@array/color_entries"
            app:entryValues="@array/color_values"
            app:key="color_setting"
            app:title="@string/settings_color"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="0.0"
            app:entries="@array/filter_entries"
            app:entryValues="@array/brightness_values"
            app:key="brightness_setting"
            app:title="@string/settings_brightness"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="1.0"
            app:entries="@array/filter_entries"
            app:entryValues="@array/contrast_values"
            app:key="contrast_setting"
            app:title="@string/settings_contrast"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/settings_ocr_category">

        <ListPreference
            app:defaultValue="0"
            app:entries="@array/speak_entries"
            app:entryValues="@array/speak_values"
            app:key="speak_setting"
            app:title="@string/settings_speak"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="0"
            app:entries="@array/volume_entries"
            app:entryValues="@array/volume_values"
            app:key="volume_setting"
            app:title="@string/settings_volume"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/settings_translate_category">

        <ListPreference
            app:defaultValue="0"
            app:entries="@array/source_entries"
            app:entryValues="@array/source_values"
            app:key="source_setting"
            app:title="@string/settings_source"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="0"
            app:entries="@array/dest_entries"
            app:entryValues="@array/dest_values"
            app:key="dest_setting"
            app:title="@string/settings_dest"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/settings_banner_category">

        <ListPreference
            app:defaultValue="0"
            app:entries="@array/banner_entries"
            app:entryValues="@array/banner_values"
            app:key="banner_setting"
            app:title="@string/settings_banner"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="1.0"
            app:entries="@array/banner_size_entries"
            app:entryValues="@array/banner_size_values"
            app:key="banner_size_setting"
            app:title="@string/settings_banner_size"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="0"
            app:entries="@array/banner_color_entries"
            app:entryValues="@array/banner_color_values"
            app:key="banner_color_setting"
            app:title="@string/settings_banner_color"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="0"
            app:entries="@array/banner_font_entries"
            app:entryValues="@array/banner_font_values"
            app:key="banner_font_setting"
            app:title="@string/settings_banner_font"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="0"
            app:entries="@array/banner_highlight_entries"
            app:entryValues="@array/banner_highlight_values"
            app:key="banner_highlight_setting"
            app:title="@string/settings_banner_highlight"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/settings_other_category">

        <ListPreference
            app:defaultValue="0"
            app:entries="@array/clipboard_entries"
            app:entryValues="@array/clipboard_values"
            app:key="clipboard_setting"
            app:title="@string/settings_clipboard"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="0.0"
            app:entries="@array/speech_rate_entries"
            app:entryValues="@array/speech_rate_values"
            app:key="speech_rate_setting"
            app:title="@string/settings_speech_rate"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/settings_help_category">

        <ListPreference
            app:defaultValue="1"
            app:entries="@array/help_entries"
            app:entryValues="@array/help_values"
            app:key="help_setting"
            app:title="@string/settings_help"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="1.0"
            app:entries="@array/help_size_entries"
            app:entryValues="@array/help_size_values"
            app:key="help_size_setting"
            app:title="@string/settings_help_size"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="0"
            app:entries="@array/help_color_entries"
            app:entryValues="@array/help_color_values"
            app:key="help_color_setting"
            app:title="@string/settings_help_color"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="0"
            app:entries="@array/banner_font_entries"
            app:entryValues="@array/banner_font_values"
            app:key="help_font_setting"
            app:title="@string/settings_help_font"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="15"
            app:entries="@array/help_timer_entries"
            app:entryValues="@array/help_timer_values"
            app:key="help_timer_setting"
            app:title="@string/settings_help_timer"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/settings_keyboard_category">

        <ListPreference
            app:defaultValue="0.25"
            app:entries="@array/pan_entries"
            app:entryValues="@array/pan_values"
            app:key="dx_setting"
            app:title="@string/settings_dx"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="0.25"
            app:entries="@array/pan_entries"
            app:entryValues="@array/pan_values"
            app:key="dy_setting"
            app:title="@string/settings_dy"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
</PreferenceScreen>
